[gd_scene load_steps=94 format=3 uid="uid://3gug44gim84w"]

[ext_resource type="Texture2D" uid="uid://c8ftwjay8cm75" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiDown.png" id="1_t8aop"]
[ext_resource type="Script" path="res://Scene/GameScene/UI/UnderButtonUI/under_button_ui.gd" id="2_uidd4"]
[ext_resource type="Texture2D" uid="uid://opwinvu6rpky" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiHealth.png" id="3_xe7i1"]
[ext_resource type="Texture2D" uid="uid://b385lqpw67wna" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiMap.png" id="4_otpja"]
[ext_resource type="Texture2D" uid="uid://7c0pplvdmgxk" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiPrice.png" id="4_pux51"]
[ext_resource type="Texture2D" uid="uid://cjydjpiyc4hr5" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiCargo.png" id="7_0ibtf"]
[ext_resource type="Texture2D" uid="uid://dknbm33ee80yj" path="res://Assets/Art/2D/UI/MainSceneUI/MainUiBluePrint.png" id="7_6a15g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oxb8i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snjs4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_smr2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_27jue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75rkb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1uao0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bq42t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eaiwu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2cdfw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouoyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oehho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_myfn8"]
atlas = ExtResource("3_xe7i1")
region = Rect2(0, 0, 58, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctdgl"]
atlas = ExtResource("3_xe7i1")
region = Rect2(58, 0, 58, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_2np2w"]
atlas = ExtResource("3_xe7i1")
region = Rect2(116, 0, 58, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_207v0"]
atlas = ExtResource("3_xe7i1")
region = Rect2(174, 0, 58, 51)

[sub_resource type="SpriteFrames" id="SpriteFrames_51rjh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myfn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctdgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2np2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_207v0")
}],
"loop": false,
"name": &"normal",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgrat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acfpw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7x8rq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mofsb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmfjt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06d0n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acip1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sh4vo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m8nd3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfeeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_riqmv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fb3ly"]
atlas = ExtResource("4_pux51")
region = Rect2(0, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_i01f0"]
atlas = ExtResource("4_pux51")
region = Rect2(58, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_48uj1"]
atlas = ExtResource("4_pux51")
region = Rect2(116, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fmms"]
atlas = ExtResource("4_pux51")
region = Rect2(174, 0, 58, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_dei84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb3ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i01f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48uj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fmms")
}],
"loop": false,
"name": &"normal",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_klgkc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nagft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_loigo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_boxi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47l46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8r6lw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_55nvc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fini1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_460j1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j7dy7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uiny8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8tna3"]
atlas = ExtResource("4_otpja")
region = Rect2(0, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8gwx"]
atlas = ExtResource("4_otpja")
region = Rect2(58, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rvud"]
atlas = ExtResource("4_otpja")
region = Rect2(116, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdpln"]
atlas = ExtResource("4_otpja")
region = Rect2(174, 0, 58, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_uff6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tna3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8gwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rvud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdpln")
}],
"loop": false,
"name": &"normal",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ljdvu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ygw4m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qreq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1mxff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewoa8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_te61i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3kyx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7qe8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwhjr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfsat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j75or"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1a28"]
atlas = ExtResource("7_0ibtf")
region = Rect2(0, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_a504y"]
atlas = ExtResource("7_0ibtf")
region = Rect2(58, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_32dts"]
atlas = ExtResource("7_0ibtf")
region = Rect2(116, 0, 58, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2csk"]
atlas = ExtResource("7_0ibtf")
region = Rect2(174, 0, 58, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_6sj31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1a28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a504y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32dts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2csk")
}],
"loop": false,
"name": &"normal",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2l3i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4loah"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8es5a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ou2mi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rijc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywqpu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnq3g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rw4hv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0trik"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51hdr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k2n6k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ix4xm"]
atlas = ExtResource("7_6a15g")
region = Rect2(0, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_rclgv"]
atlas = ExtResource("7_6a15g")
region = Rect2(50, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pbh1"]
atlas = ExtResource("7_6a15g")
region = Rect2(100, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0w1n"]
atlas = ExtResource("7_6a15g")
region = Rect2(150, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_62vk2"]
atlas = ExtResource("7_6a15g")
region = Rect2(200, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcsxk"]
atlas = ExtResource("7_6a15g")
region = Rect2(250, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_v26er"]
atlas = ExtResource("7_6a15g")
region = Rect2(300, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy385"]
atlas = ExtResource("7_6a15g")
region = Rect2(350, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7svv"]
atlas = ExtResource("7_6a15g")
region = Rect2(400, 0, 50, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_es4wo"]
atlas = ExtResource("7_6a15g")
region = Rect2(450, 0, 50, 51)

[sub_resource type="SpriteFrames" id="SpriteFrames_dbtbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix4xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rclgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pbh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0w1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62vk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcsxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v26er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy385")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7svv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es4wo")
}],
"loop": false,
"name": &"normal",
"speed": 10.0
}]

[node name="UnderButtonUI" type="TextureRect" node_paths=PackedStringArray("health_animated_sprite", "price_animated_sprite", "map_animated_sprite", "cargo_animated_sprite", "fitment_animated_sprite")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -216.0
offset_right = 393.0
offset_bottom = -158.0
grow_vertical = 0
scale = Vector2(4, 4)
texture = ExtResource("1_t8aop")
script = ExtResource("2_uidd4")
health_animated_sprite = NodePath("HealthButton/HealthAnimatedSprite")
price_animated_sprite = NodePath("PriceButton/PriceAnimatedSprite")
map_animated_sprite = NodePath("MapButton/MapAnimatedSprite")
cargo_animated_sprite = NodePath("CargoButton/CargoAnimatedSprite")
fitment_animated_sprite = NodePath("FitmentButton/FitmentAnimatedSprite")

[node name="HealthButton" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = -16.0
offset_right = 136.0
offset_bottom = 35.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_oxb8i")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_snjs4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_smr2v")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_27jue")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_75rkb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1uao0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bq42t")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_eaiwu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2cdfw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ouoyx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oehho")

[node name="HealthAnimatedSprite" type="AnimatedSprite2D" parent="HealthButton"]
sprite_frames = SubResource("SpriteFrames_51rjh")
animation = &"normal"
centered = false

[node name="PriceButton" type="Button" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = -16.0
offset_right = 204.0
offset_bottom = 36.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xgrat")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_acfpw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7x8rq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_mofsb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kmfjt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_06d0n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_acip1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sh4vo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m8nd3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_yfeeq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_riqmv")

[node name="PriceAnimatedSprite" type="AnimatedSprite2D" parent="PriceButton"]
sprite_frames = SubResource("SpriteFrames_dei84")
animation = &"normal"
centered = false

[node name="MapButton" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = -16.0
offset_right = 273.0
offset_bottom = 36.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_klgkc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_nagft")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_loigo")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_boxi6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_47l46")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8r6lw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_55nvc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fini1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_460j1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_j7dy7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uiny8")

[node name="MapAnimatedSprite" type="AnimatedSprite2D" parent="MapButton"]
sprite_frames = SubResource("SpriteFrames_uff6w")
animation = &"normal"
centered = false

[node name="CargoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = -16.0
offset_right = 343.0
offset_bottom = 36.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ljdvu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ygw4m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3qreq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1mxff")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ewoa8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_te61i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_b3kyx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_r7qe8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jwhjr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hfsat")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j75or")

[node name="CargoAnimatedSprite" type="AnimatedSprite2D" parent="CargoButton"]
sprite_frames = SubResource("SpriteFrames_6sj31")
animation = &"normal"
centered = false

[node name="FitmentButton" type="Button" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = -17.0
offset_right = 433.0
offset_bottom = 26.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m2l3i")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4loah")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8es5a")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ou2mi")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rijc3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ywqpu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dnq3g")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rw4hv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0trik")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_51hdr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k2n6k")

[node name="FitmentAnimatedSprite" type="AnimatedSprite2D" parent="FitmentButton"]
sprite_frames = SubResource("SpriteFrames_dbtbn")
animation = &"normal"
centered = false

[connection signal="mouse_entered" from="HealthButton" to="." method="_on_health_button_mouse_entered"]
[connection signal="mouse_exited" from="HealthButton" to="." method="_on_health_button_mouse_exited"]
[connection signal="pressed" from="HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="mouse_entered" from="PriceButton" to="." method="_on_price_button_mouse_entered"]
[connection signal="mouse_exited" from="PriceButton" to="." method="_on_price_button_mouse_exited"]
[connection signal="pressed" from="PriceButton" to="." method="_on_price_button_pressed"]
[connection signal="mouse_entered" from="MapButton" to="." method="_on_map_button_mouse_entered"]
[connection signal="mouse_exited" from="MapButton" to="." method="_on_map_button_mouse_exited"]
[connection signal="pressed" from="MapButton" to="." method="_on_map_button_pressed"]
[connection signal="mouse_entered" from="CargoButton" to="." method="_on_cargo_button_mouse_entered"]
[connection signal="mouse_exited" from="CargoButton" to="." method="_on_cargo_button_mouse_exited"]
[connection signal="pressed" from="CargoButton" to="." method="_on_cargo_button_pressed"]
[connection signal="mouse_entered" from="FitmentButton" to="." method="_on_fitment_button_mouse_entered"]
[connection signal="mouse_exited" from="FitmentButton" to="." method="_on_fitment_button_mouse_exited"]
[connection signal="pressed" from="FitmentButton" to="." method="_on_fitment_button_pressed"]
